--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,11 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+
+# Prevent project files from being tracked by git
+*.bun-build
+bun.lock
+report.txt
+package-lock.json
+random-number-generator-*
